k8s/ops/concourse/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: concourse
  labels:
    app.kubernetes.io/component: concourse
    app.kubernetes.io/instance: concourse
    app.kubernetes.io/name: concourse
  annotations:
    linkerd.io/inject: enabled
