k8s/ops/concourse/concourse.yml
---
apiVersion: v1
kind: Service
metadata:
  name: concourse-web
  namespace: concourse
  labels:
    app.kubernetes.io/component: concourse-web
    app.kubernetes.io/instance: concourse
    app.kubernetes.io/name: concourse
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9391"
spec:
  type: ClusterIP
  ports:
    - name: atc
      port: 8080
      targetPort: atc
    - name: tsa
      port: 2222
      targetPort: tsa
    - name: prometheus
      port: 9391
      targetPort: prometheus
  selector:
    app.kubernetes.io/component: concourse-web
    app.kubernetes.io/instance: concourse
    app.kubernetes.io/name: concourse
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: concourse-web
  namespace: concourse
  labels:
    app.kubernetes.io/component: concourse-web
    app.kubernetes.io/instance: concourse
    app.kubernetes.io/name: concourse
  annotations:
    ingress.kubernetes.io/custom-request-headers: "l5d-dst-override: concourse-web.concourse.svc.cluster.local:8080"
    ingress.kubernetes.io/custom-response-headers: "l5d-remote-ip: || l5d-server-id:"
spec:
  rules:
    - host: ci.issho-ni.co
      http:
        paths:
          - backend:
              serviceName: concourse-web
              servicePort: atc
---
apiVersion: v1
kind: Service
metadata:
  name: concourse-worker
  namespace: concourse
  labels:
    app.kubernetes.io/component: concourse-worker
    app.kubernetes.io/instance: concourse
    app.kubernetes.io/name: concourse
spec:
  type: ClusterIP
  clusterIP: None
  ports: []
  selector:
    app.kubernetes.io/component: concourse-worker
    app.kubernetes.io/instance: concourse
    app.kubernetes.io/name: concourse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concourse-web
  namespace: concourse
  labels:
    app.kubernetes.io/component: concourse-web
    app.kubernetes.io/instance: concourse
    app.kubernetes.io/name: concourse
  annotations:
    flux.weave.works/tag.concourse-web: semver:~5
    flux.weave.works/tag.prometheus-to-sd: semver:~0
    flux.weave.works/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: concourse-web
      app.kubernetes.io/instance: concourse
      app.kubernetes.io/name: concourse
  template:
    metadata:
      labels:
        app.kubernetes.io/component: concourse-web
        app.kubernetes.io/instance: concourse
        app.kubernetes.io/name: concourse
    spec:
      serviceAccountName: concourse-web
      containers:
        - name: concourse-web
          image: concourse/concourse:5.4.1
          imagePullPolicy: IfNotPresent
          args:
            - web
          ports:
            - name: atc
              containerPort: 8080
            - name: tsa
              containerPort: 2222
            - name: atc-debug
              containerPort: 8079
            - name: prometheus
              containerPort: 9391
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/v1/info
              port: atc
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/v1/info
              port: atc
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: concourse-keys
              mountPath: /concourse-keys
              readOnly: true
            - name: auth-keys
              mountPath: /concourse-auth
              readOnly: true
      volumes:
        - name: concourse-keys
          secret:
            secretName: concourse-web
            defaultMode: 0400
            items:
              - key: host-key
                path: host_key
              - key: session-signing-key
                path: session_signing_key
              - key: worker-key-pub
                path: worker_key.pub
        - name: auth-keys
          secret:
            secretName: concourse-web
            defaultMode: 0400
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: concourse-worker
  namespace: concourse
  labels:
    app.kubernetes.io/component: concourse-worker
    app.kubernetes.io/instance: concourse
    app.kubernetes.io/name: concourse
  annotations:
    flux.weave.works/tag.concourse-worker-init-rm: semver:~5
    flux.weave.works/tag.concourse-worker: semver:~5
    flux.weave.works/automated: "true"
spec:
  serviceName: concourse-worker
  selector:
    matchLabels:
      app.kubernetes.io/component: concourse-worker
      app.kubernetes.io/instance: concourse
      app.kubernetes.io/name: concourse
  template:
    metadata:
      labels:
        app.kubernetes.io/component: concourse-worker
        app.kubernetes.io/instance: concourse
        app.kubernetes.io/name: concourse
      annotations:
        linkerd.io/inject: disabled
    spec:
      serviceAccountName: concourse-worker
      terminationGracePeriodSeconds: 60
      containers:
        - name: concourse-worker
          image: concourse/concourse:5.4.1
          imagePullPolicy: IfNotPresent
          args:
            - worker
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: worker-hc
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
          lifecycle:
            preStop:
              exec:
                command:
                  - "/bin/bash"
                  - "/pre-stop-hook.sh"
          ports:
            - name: worker-hc
              containerPort: 8888
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            privileged: true
          volumeMounts:
            - name: concourse-keys
              mountPath: /concourse-keys
              readOnly: true
            - name: concourse-work-dir
              mountPath: /concourse-work-dir
            - name: pre-stop-hook
              mountPath: /pre-stop-hook.sh
              subPath: pre-stop-hook.sh
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/component: concourse-worker
                  app.kubernetes.io/instance: concourse
                  app.kubernetes.io/name: concourse
              topologyKey: kubernetes.io/hostname
      volumes:
        - name: pre-stop-hook
          configMap:
            name: concourse-worker
        - name: concourse-keys
          secret:
            secretName: concourse-worker
            defaultMode: 0400
            items:
              - key: host-key-pub
                path: host_key.pub
              - key: worker-key
                path: worker_key
              - key: worker-key-pub
                path: worker_key.pub
  volumeClaimTemplates:
    - metadata:
        name: concourse-work-dir
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
